//
// Copyright 2019 DxOS.
//

syntax = "proto3";

package testing;

import "google/protobuf/any.proto";

message AnyNumber {
  int32 value = 1;
}

message AnyString {
  string value = 1;
}

message AnyData {
  google.protobuf.Any value = 1;
}
