//
// Copyright 2019 DxOS.
//

syntax = "proto3";

package testing;

import "google/protobuf/any.proto";

message Container {
  string bucket_id = 1;
  google.protobuf.Any data = 2;
  repeated google.protobuf.Any repeatedData = 3;
  CustomType customType = 4;
  repeated CustomType repeatedCustomType = 5;
}

message CustomType {
  string value = 1;
  google.protobuf.Any data = 2;
}
